--- a/style.css
+++ b/style.css
@@ -1,19 +1,14 @@
-body {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    height: 100vh;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    background-color: #c4acee;
-    color: #ffffff;
-}
-
-body h1 {
-    width: 80%;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+h1{
+    font-family: "Roboto", sans-serif;
     text-align: center;
-    font-size: 80px;
-    font-family: sans-serif;
+    color: antiquewhite;
+}
+p{
+    font-family: "Roboto", sans-serif;
+    color: antiquewhite;
+    font-size: 18px;
+}
+body{
+    background-color: brown;
 }
