--- a/style.css
+++ b/style.css
@@ -81,8 +81,139 @@ a {
     color: rgb(130, 18, 18);
     text-decoration:underline;
 }
+.order form {
+
+    width: 70%;
+    margin: 0 auto;
+    border-radius: 24px;
+    bottom: 2px solid #333;
+    background-color: antiquewhite;
+    padding: 60px 50px;
+}
+
+.field {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.input {
+    width: 100%;
+    border-radius: 8px;
+    padding: 12px;
+    border: none;
+    background-color: rgb(150, 39, 39);
+    color: white;
+    font-size: 18px;
+}
+
+.input::placeholder {
+    color: rgba(236, 210, 177, 0.9);
+}
+
+.submit-btn {
+    display: block;
+    width: 240px;
+    margin: 0 auto;
+    padding: 12px;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    background-color: rgb(113, 22, 22);
+    color: white;
+    transition: 0.2s;
+}
+
+.submit-btn:hover {
+    background-color: rgb(142, 32, 32);
+}
+.CH{
+    font-family: "Roboto", sans-serif;
+    color: #431702;
+}
+.f{
+    margin-bottom: 20px;
+    margin-left: 40px;
+}
+.Mnenie{
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    color: #431702;
+}
+footer{
+    text-align: center;
+    padding: 50px;
+    background-color: antiquewhite;
+    color: #431702;
+}
 
 @media (min-width: 768px) {
+    .order form {
+        width: 600px;
+        margin: 0 auto;
+        border-radius: 24px;
+        bottom: 2px solid #333;
+        background-color: antiquewhite;
+        padding: 60px 50px;
+    }
+    
+    .field {
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    
+    .input {
+        width: 500px;
+        border-radius: 8px;
+        padding: 12px;
+        border: none;
+        background-color: rgb(150, 39, 39);
+        color: white;
+        font-size: 18px;
+    }
+    
+    .input::placeholder {
+        color: rgba(236, 210, 177, 0.9);
+    }
+    
+    .submit-btn {
+        display: block;
+        width: 240px;
+        margin: 0 auto;
+        padding: 12px;
+        font-size: 18px;
+        font-weight: bold;
+        border-radius: 8px;
+        border: none;
+        cursor: pointer;
+        background-color: rgb(113, 22, 22);
+        color: white;
+        transition: 0.2s;
+    }
+    
+    .submit-btn:hover {
+        background-color: rgb(142, 32, 32);
+    }
+    .CH{
+        font-family: "Roboto", sans-serif;
+        color: #431702;
+    }
+    .f{
+        margin-bottom: 20px;
+        margin-left: 40px;
+    }
+    .Mnenie{
+        text-align: center;
+        font-family: "Roboto", sans-serif;
+        color: #431702;
+    }
+    footer{
+        text-align: center;
+        padding: 50px;
+        background-color: antiquewhite;
+        color: #431702;
+    }
     .menu {
 display: none;
   }
@@ -98,12 +229,13 @@ display: none;
     background-color: rgb(236, 210, 177, 0.9);
     margin: 15px;
     padding: 15px;
-
 }
 .button1{
     font-family: "Roboto", sans-serif;
     color: rgb(130, 18, 18);
     font-size: 30px;
+    display: flex;
+    flex-direction: row;
 }
   h1{
     font-family: "Roboto", sans-serif;
@@ -169,7 +301,6 @@ display: none;
             padding: 15px 120px;
       }
       .curtain{
-        
         width: 45%;
       }
       .N{
@@ -196,5 +327,70 @@ display: none;
     }
     .NO{
         display: none;
+    }
+    .order form {
+        width: 600px;
+        margin: 0 auto;
+        border-radius: 24px;
+        bottom: 2px solid #333;
+        background-color: antiquewhite;
+        padding: 60px 50px;
+    }
+    
+    .field {
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    
+    .input {
+        width: 500px;
+        border-radius: 8px;
+        padding: 12px;
+        border: none;
+        background-color: rgb(150, 39, 39);
+        color: white;
+        font-size: 18px;
+    }
+    
+    .input::placeholder {
+        color: rgba(236, 210, 177, 0.9);
+    }
+    
+    .submit-btn {
+        display: block;
+        width: 240px;
+        margin: 0 auto;
+        padding: 12px;
+        font-size: 18px;
+        font-weight: bold;
+        border-radius: 8px;
+        border: none;
+        cursor: pointer;
+        background-color: rgb(113, 22, 22);
+        color: white;
+        transition: 0.2s;
+    }
+    
+    .submit-btn:hover {
+        background-color: rgb(142, 32, 32);
+    }
+    .CH{
+        font-family: "Roboto", sans-serif;
+        color: #431702;
+    }
+    .f{
+        margin-bottom: 20px;
+        margin-left: 40px;
+    }
+    .Mnenie{
+        text-align: center;
+        font-family: "Roboto", sans-serif;
+        color: #431702;
+    }
+    footer{
+        text-align: center;
+        padding: 50px;
+        background-color: antiquewhite;
+        color: #431702;
     }
   }
