--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ html {
     font-family: "Roboto", sans-serif;
     color: #431702;
 }
+.F{
+        font-family: "Roboto", sans-serif;
+    color: #431702;
+    font-size: 18px;
+}
 h1{
     font-family: "Roboto", sans-serif;
     text-align: center;
